# warband-tft

./: .gitattributes  .gitignore  Cargo.toml  clippy.toml  justfile  rustfmt.toml
.cargo/: config.toml
assets/models/: frog.glb
assets/shaders/: color.wgsl  core.wgsl
crates/warband/: Cargo.toml  build.rs
crates/warband/src/: main.rs
crates/warband_lib/: Cargo.toml
crates/warband_lib/src/: lib.rs  prelude.rs  version.rs
crates/warband_lib/src/ability/: action.rs  area.rs  cast.rs  caster.rs  design.txt  effect.rs  event.rs  events.rs  example.rs  mod.rs  projectile.rs  slot.rs  stormbolt.txt
crates/warband_lib/src/assets/: mod.rs
crates/warband_lib/src/board/: footprint.rs  location.rs  mod.rs  occupied.rs
crates/warband_lib/src/core/: camera_driver.rs  cleanup.rs  despawn.rs  mod.rs  name.rs  previous.rs  required_component.rs  spawn.rs
crates/warband_lib/src/dev/: console.rs  gizmos_ext.rs  mod.rs  perf.rs
crates/warband_lib/src/in_game/: file.rs  mod.rs
crates/warband_lib/src/loading/: mod.rs
crates/warband_lib/src/navigation/: agent.rs  mod.rs  navigation.rs  path.rs  todo
crates/warband_lib/src/physics/: mod.rs  motor.rs
crates/warband_lib/src/player/: camera.rs  mod.rs
crates/warband_lib/src/spells/: augment.rs  caster.rs  effect.rs  mod.rs  stats.rs
crates/warband_lib/src/stats/: design.tldr  mod.rs  modifier.rs  pool.rs  stat.rs
crates/warband_lib/src/stats/_old/: mod.rs  modifier.rs
crates/warband_lib/src/ui/: mod.rs  semver.rs
crates/warband_lib/src/unit/: ai.rs  combat.rs  mod.rs  stats.rs
crates/warband_lib/src/util/: ballistics_math.rs  bevy_ext.rs  configure.rs  math_ext.rs  math_trait.rs  mod.rs  pipe.rs
crates/warband_macros/: Cargo.toml
crates/warband_macros/src/: ability.rs  bevy.rs  lib.rs  spawner.rs  spell.rs  stat.rs  util.rs
docs/: ability.tldr  loop.tldr  navigation.tldr  notes.md  proto.tldr  spell.tldr  unit_ai.tldr  workspace.tldr
