[package]
name = "warband"
version = "0.1.0"
authors = ["pyrbin <git@pyrbin>"]
edition = "2021"
build = "build.rs"

[features]
default = ["dev"]
dev = [
    "warband_lib/dev",
    "bevy/dynamic_linking",
]
tracing = ["bevy/trace_chrome"]

[dependencies.bevy]
workspace = true
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
]

[dependencies]
warband_lib = { path = "../warband_lib" }
bevy_embedded_assets = "0.11.0"

# keep the following in sync with Bevy's dependencies
## https://github.com/bevyengine/bevy/blob/v0.14.1/crates/bevy_winit/Cargo.toml#L35
winit = { version = "0.30", default-features = false }
## https://github.com/bevyengine/bevy/blob/v0.14.1/crates/bevy_render/Cargo.toml#L65
image = { version = "0.25.2", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"

[build-dependencies]
embed-resource = "2.4.2"
