[package]
name = "warband_lib"
version = "0.1.0"
authors = ["pyrbin <git@pyrbin>"]
edition = "2021"

[features]
dev = [
    "dep:bevy_editor_pls",
]

[dependencies.bevy]
workspace = true
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
]

[dependencies]
warband_macros = { path = "../warband_macros" }

# bevy plugins
bevy_kira_audio = "0.20"
bevy_asset_loader = { version = "0.21", features = ["standard_dynamic_assets"] }
bevy_common_assets = { version = "0.11", features = ["ron", "toml"] }
bevy_egui = "0.28" # version governed by bevy_editor_pls
bevy_editor_pls = { version = "0.9.0", optional = true }
avian3d = { version = "0.1.2", features = ["simd", "parallel"] }
hexx = { git = "https://github.com/ManevilleF/hexx.git", branch = "main", features = ["grid", "serde", "bevy_reflect"] }
bevy_spatial = { version = "0.9.0" }

# generic dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"
bytemuck = "1.15.0"
micromap = "0.0.15"
smallvec = { version = "1.13.2", features = ["union"] }
git-version = "0.3.9"
const_format = "0.2.32"
lazy_static = "1.4.0"
derive_more = "0.99.17"
rand = "0.8.5"
thiserror = "1.0"
itertools = "0.13.0"
tiny_bail = "0.3.0"
glam = "0.27"
