[package]
name = "warband_lib"
version = { workspace = true }
authors = ["pyrbin <git@pyrbin>"]
edition.workspace = true

[features]
dev = [
    "dep:bevy-inspector-egui",
    "dep:bevy_egui",
    "dep:bevy_editor_pls",
    "dep:iyes_perf_ui",
    "dep:bevy_dev_console"
]

[dependencies.bevy]
workspace = true
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
]

[dependencies]
warband_macros = { path = "../warband_macros" }

bevy_kira_audio = "0.20"
bevy_asset_loader = { version = "0.21", features = ["standard_dynamic_assets"] }
bevy_common_assets = { version = "0.11", features = ["ron", "toml"] }
avian3d = { version = "0.1.2", features = ["simd", "parallel"] }
hexx = { version = "0.18", features = ["grid", "serde", "bevy_reflect"] }
bevy_spatial = { version = "0.9.0" }
bevy_mod_picking = { version = "0.20", default-features = true }
bevy_vector_shapes = { git = "https://github.com/pyrbin/bevy_vector_shapes.git", branch = "orthographic-billboard" }
big-brain = "0.21.1"
bevy-trait-query = { git = "https://github.com/RobWalt/bevy-trait-query.git", branch = "bevy-0.14-partial-update" } 
bevy_sprite3d = "3.0.0"
i-cant-believe-its-not-bsn = "0.1.1"

# dev
bevy_egui = { version = "0.28.0", optional = true } # version governed by bevy_editor_pls
bevy-inspector-egui = { version = "0.25.0", optional = true } # version governed by bevy_editor_pls
bevy_editor_pls = { version = "0.9.0", optional = true }
iyes_perf_ui = { version = "0.3.0", optional = true }
bevy_dev_console = { git = "https://github.com/doonv/bevy_dev_console.git", branch = "master", optional = true }

# other
serde = { version = "1", features = ["derive"] }
anyhow = "1"
bytemuck = "1.15.0"
micromap = "0.0.15"
smallvec = { version = "1.13.2", features = ["union"] }
git-version = "0.3.9"
const_format = "0.2.32"
lazy_static = "1.4.0"
derive_more = "0.99.17"
rand = "0.8.5"
thiserror = "1.0"
itertools = "0.13.0"
tiny_bail = "0.3.0"
glam = "0.27"
bon = "2.2.1"
dashmap = "6.1.0"
bitflags = "1.3.2"
enumflags2 = "0.7.10"
enum_dispatch = "0.3.13"
dyn-clone = "1.0.17"
