[package]
name = "warband_macros"
version = "0.1.0"
authors = ["pyrbin <git@pyrbin>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies.bevy]
workspace = true
default-features = false

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.63"
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
proc-macro-utils = "0.8.0"
lazy_static = "1.4.0"
